--- a/packages/contentstack/package.json
+++ b/packages/contentstack/package.json
@@ -15,6 +15,8 @@
     }
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@nestjs/common": "^10.0.0",
+    "contentstack": "3.25.3"
   }
 }
