--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@informa-onboarding/graphql",
   "version": "0.0.1",
+  "type": "module",       
   "private": true,
   "scripts": {
     "build": "tsc -p tsconfig.lib.json"
@@ -17,6 +18,9 @@
     }
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@apollo/client": "^3.9.0",
+    "graphql": "^16.7.0",
+    "@graphql-typed-document-node/core": "^3.2.0"
   }
 }
