--- a/packages/graphql/tsconfig.lib.json
+++ b/packages/graphql/tsconfig.lib.json
@@ -8,7 +8,9 @@
     "emitDeclarationOnly": false,
     "forceConsistentCasingInFileNames": true,
     "types": ["node"],
-    "module": "nodenext"
+    "module": "esnext",
+    "moduleResolution": "node",
+    "target": "ES2020",
   },
   "include": [
     "src/**/*.ts",
